--- a/assets/style.css
+++ b/assets/style.css
@@ -7,3 +7,48 @@
 html {
     font-size: 16px;
 }
+
+
+/* ******************** style background-color ************ */
+
+header { 
+    background-color: aqua;
+    height: 25vh;
+    margin: 5px;
+}
+
+aside {
+    background-color:#9f8dff;
+    height: 50vh;
+    margin: 5px;
+}
+
+section article {
+        height: 25vh;
+    margin: 5px;
+
+}
+section article:nth-of-type(1) {
+    background-color:#95ffb5;
+
+}
+section article:nth-of-type(2) {
+    background-color:#edb374;
+
+}
+
+section article:nth-of-type(3) {
+    background-color:#e05fb2;
+
+}
+
+section article:nth-of-type(4) {
+    background-color:#cfff78;
+
+}
+
+footer {
+    background-color:#829fe5 ;
+    height: 25vh;
+    margin: 5px;
+}
