--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@ html {
 header {
     background-color: aqua;
     height: 25vh;
-    margin: 5px;
+    margin: 5px 5px 0 5px; 
 }
 
 section{
@@ -25,7 +25,7 @@ section{
 section aside {
     background-color: #9f8dff;
     height: 51.5vh;
-    margin: 5px;
+    margin: 5px 5px 0 0px ;
     width: 45.7vw;
     order: 1;
 }
@@ -39,7 +39,7 @@ section section {
 
 section section article {
     height: 25vh;
-    margin: 5px;
+    margin: 5px 0 0 5px;
     width: 48.9%;
 
 }
@@ -76,6 +76,8 @@ footer {
         order: -1 ;
         width: 98.5%;
         height: 25vh;
+        margin-left: 5px;
+        margin-right: 0;
     
     }
 
